--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+#Ignore dist directory
+dist/
+
+#Ignore Mac Files
+.DS_Store
